fix alignment problem with range selectors

--- a/src/styles/partials/_forms.scss
+++ b/src/styles/partials/_forms.scss
@@ -13,8 +13,10 @@
   }
   input, textarea{
     border: 1px solid #cecece;
-  	padding: 4px;
+  	margin: 0;
+    padding: 4px;
   	width: 220px;
+    
   	&[type=radio], &[type=checkbox]{
   		width: auto;
   	}
@@ -55,6 +57,8 @@
     height: 69px; // 3 lines
   }
 
+
+  
 }
 
 .divider {
